--- a/task-js/index.html
+++ b/task-js/index.html
@@ -10,7 +10,9 @@
 	<!-- <script src="taskSomeFunction.js"></script> -->
 	<!-- <script src="taskPalindrom.js"></script> -->
 	<!-- <script src="taskFizzBuzz.js"></script> -->
-	<script src="taskAnagramma.js"></script>
+	<!--<script src="taskAnagramma.js"></script>-->
+	<!--<script src="taskSearchVowels.js"></script>-->
+	<script src="taskFibonachi.js"></script>
 </head>
 <body>
 	<h1>HELLO WORLD!</h1>
