--- a/prof-js/index.html
+++ b/prof-js/index.html
@@ -6,10 +6,7 @@
 </head>
 <body>
 <button>Click</button>
-<a href="http://google.com" target="_blank">google</a>
-<div style="width: 150px; height: 150px; background: red; padding: 15px;" id="big">
-    <div style="width: 50px; height: 50px; background-color: blue;" id="small"></div>
-</div>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="index.js" ></script>
 </body>
 </html>
